{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 123,
  "lineage": "7e4a3364-2cad-abc5-acb8-4544916f5928",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "store_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07b301a23def3266d",
            "arn": "arn:aws:ec2:ap-south-1:605134452604:instance/i-082d8853694680c67",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-082d8853694680c67",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "elk-stack-server_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0cb5ad327822337f1"
              }
            ],
            "primary_network_interface_id": "eni-0cb5ad327822337f1",
            "private_dns": "ip-172-31-41-217.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.41.217",
            "public_dns": "ec2-13-127-193-149.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.193.149",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:605134452604:key/81f437a5-c05d-44e2-a5c4-f7f34ca0e3ee",
                "throughput": 125,
                "volume_id": "vol-09643599c9d2510ff",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "store-ai-stack-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08c69d7b31b3eba8e",
            "tags": {
              "Name": "store-instance",
              "Project": "store-ai-stack"
            },
            "tags_all": {
              "Name": "store-instance",
              "Project": "store-ai-stack"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09478b5c3b8edeee4"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "605134452604",
            "id": "i-082d8853694680c67",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.store_sg",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "store_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134452604:security-group/sg-09478b5c3b8edeee4",
            "description": "Security group for ai stack",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09478b5c3b8edeee4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "127.0.0.1/32"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [
                  "127.0.0.1/32"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "127.0.0.1/32"
                ],
                "description": "",
                "from_port": 9093,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9093
              }
            ],
            "name": "store-ai-stack-sg",
            "name_prefix": "",
            "owner_id": "605134452604",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "store-stack-sg",
              "Project": "store-ai-stack"
            },
            "tags_all": {
              "Name": "store-stack-sg",
              "Project": "store-ai-stack"
            },
            "timeouts": null,
            "vpc_id": "vpc-06584cc97d59720ce"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "605134452604",
            "id": "sg-09478b5c3b8edeee4",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134452604:security-group-rule/sgr-034174461c5eacab7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-034174461c5eacab7",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-09478b5c3b8edeee4",
            "security_group_rule_id": "sgr-034174461c5eacab7",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "605134452604",
            "id": "sgr-034174461c5eacab7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.store_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "internal_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "6379",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134452604:security-group-rule/sgr-0c284ca75f2603f98",
            "cidr_ipv4": "127.0.0.1/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6379,
            "id": "sgr-0c284ca75f2603f98",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-09478b5c3b8edeee4",
            "security_group_rule_id": "sgr-0c284ca75f2603f98",
            "tags": null,
            "tags_all": {},
            "to_port": 6379
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "605134452604",
            "id": "sgr-0c284ca75f2603f98",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.store_sg"
          ]
        },
        {
          "index_key": "9090",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134452604:security-group-rule/sgr-016a3a33e093c6f36",
            "cidr_ipv4": "127.0.0.1/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9090,
            "id": "sgr-016a3a33e093c6f36",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-09478b5c3b8edeee4",
            "security_group_rule_id": "sgr-016a3a33e093c6f36",
            "tags": null,
            "tags_all": {},
            "to_port": 9090
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "605134452604",
            "id": "sgr-016a3a33e093c6f36",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.store_sg"
          ]
        },
        {
          "index_key": "9093",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134452604:security-group-rule/sgr-003373add6c6f123e",
            "cidr_ipv4": "127.0.0.1/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9093,
            "id": "sgr-003373add6c6f123e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-09478b5c3b8edeee4",
            "security_group_rule_id": "sgr-003373add6c6f123e",
            "tags": null,
            "tags_all": {},
            "to_port": 9093
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "605134452604",
            "id": "sgr-003373add6c6f123e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.store_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "public_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "22",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134452604:security-group-rule/sgr-0e74327927986442e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0e74327927986442e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-09478b5c3b8edeee4",
            "security_group_rule_id": "sgr-0e74327927986442e",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "605134452604",
            "id": "sgr-0e74327927986442e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.store_sg"
          ]
        },
        {
          "index_key": "3000",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134452604:security-group-rule/sgr-05de1fe13149bcea4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-05de1fe13149bcea4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-09478b5c3b8edeee4",
            "security_group_rule_id": "sgr-05de1fe13149bcea4",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "605134452604",
            "id": "sgr-05de1fe13149bcea4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.store_sg"
          ]
        },
        {
          "index_key": "3001",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134452604:security-group-rule/sgr-059dd220ebd9873eb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3001,
            "id": "sgr-059dd220ebd9873eb",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-09478b5c3b8edeee4",
            "security_group_rule_id": "sgr-059dd220ebd9873eb",
            "tags": null,
            "tags_all": {},
            "to_port": 3001
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "605134452604",
            "id": "sgr-059dd220ebd9873eb",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.store_sg"
          ]
        },
        {
          "index_key": "443",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134452604:security-group-rule/sgr-0a8420a7a894159e7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0a8420a7a894159e7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-09478b5c3b8edeee4",
            "security_group_rule_id": "sgr-0a8420a7a894159e7",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "605134452604",
            "id": "sgr-0a8420a7a894159e7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.store_sg"
          ]
        },
        {
          "index_key": "80",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134452604:security-group-rule/sgr-06f677763e1fedfc7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-06f677763e1fedfc7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-09478b5c3b8edeee4",
            "security_group_rule_id": "sgr-06f677763e1fedfc7",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "605134452604",
            "id": "sgr-06f677763e1fedfc7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.store_sg"
          ]
        },
        {
          "index_key": "8000",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134452604:security-group-rule/sgr-03ead96e042cb2255",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8000,
            "id": "sgr-03ead96e042cb2255",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-09478b5c3b8edeee4",
            "security_group_rule_id": "sgr-03ead96e042cb2255",
            "tags": null,
            "tags_all": {},
            "to_port": 8000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "605134452604",
            "id": "sgr-03ead96e042cb2255",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.store_sg"
          ]
        },
        {
          "index_key": "8001",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134452604:security-group-rule/sgr-0df50f27fe3dcee44",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8001,
            "id": "sgr-0df50f27fe3dcee44",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-09478b5c3b8edeee4",
            "security_group_rule_id": "sgr-0df50f27fe3dcee44",
            "tags": null,
            "tags_all": {},
            "to_port": 8001
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "605134452604",
            "id": "sgr-0df50f27fe3dcee44",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.store_sg"
          ]
        },
        {
          "index_key": "9090",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134452604:security-group-rule/sgr-0c893b53aecb0ed5e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9090,
            "id": "sgr-0c893b53aecb0ed5e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-09478b5c3b8edeee4",
            "security_group_rule_id": "sgr-0c893b53aecb0ed5e",
            "tags": null,
            "tags_all": {},
            "to_port": 9090
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "605134452604",
            "id": "sgr-0c893b53aecb0ed5e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.store_sg"
          ]
        }
      ]
    }
  ]
}